--- a/style.css
+++ b/style.css
@@ -1,14 +1,72 @@
+:root {
+  --text-color-dark: #2A2A2A;
+  --bg-about-dark: #312F2E;
+  --gray-color: #B3B3B3;
+  --light-orange-color: #ECD3CA;
+  --pink-color: #FF3451;
+  --light-gray: #F7F7F7;
+  --white-color: #ffffff;
+  --light-green-color: #BCD1AA;
+}
+
 body{
-    background-image: url(background.jpg);
-    background-size: cover;
+  font-family: 'Montserrat', sans-serif;
+  color: #2A2A2A;
+  background-image: url(background.jpg);
+  background-size: cover;
+  background-position: center 0px;
 }
 
-
-header{
-    position:fixed;
-	width: 100%;
-	background: #E2BA03;
-	height: 70px;
-    background:#E2BA03 url(logo.png) no-repeat 50%;
+.btn {
+  background: var(--text-color-dark);
+  color: var(--white-color);
+  text-transform: capitalize;
+  font-size: 20px;
+  text-align: center;
+  display: inline-block;
+  box-shadow: 0 0 var(--blur-shadow) var(--box-shadow-btn);
 }
 
+form {
+  position: relative;
+  margin: 0 auto;
+}
+
+.form {
+  width: 100%;
+  height: 82px;
+  background-color: #ffffff;
+  align-items: center;
+  text-align: center;
+  padding-top: 1px;
+  padding-bottom: 20px;
+}
+
+.form p {
+  margin-top: 20px;
+  font-size: 16px;
+  margin-bottom: 56px;
+}
+
+.form-text {
+  width: 10%;
+  margin-left: 35%;
+}
+
+.item-image{
+  left: 0px;
+  top: 0px;
+  position: absolute;
+}
+
+.item-KnMenu{
+  bottom: 640px;
+  left: 1280px;
+  position: absolute;
+}
+
+.item-KnAkk{
+  bottom: 630px;
+  left: 1380px;
+  position: absolute;
+}
