--- a/templates/main.html
+++ b/templates/main.html
@@ -7,6 +7,6 @@ Main Page
 {% block some_text %}
 <h1 style="text-align: center">Это основная страница сайта <br>(да, так уж получилось)</h1>
 <h4>Переход на страничку добавления статьи</h4>
-<a class = "main-button" href="/create-article">Добавить статью</a>
+<a class = "main-button" href='/login'>Login</a>
 <a class = "main-button" href="/posts" style="margin-left: 70px">Все статьи</a>
 {% endblock %}
